# solana-utils

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  rust-toolchain.toml
.github/workflow/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: config_init.rs  mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/sutils/: Cargo.toml
crates/sutils/src/: account.rs  discriminator.rs  instruction_packer.rs  lib.rs  processor.rs  uint.rs
scripts/: lint.sh
