[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonedaddy/solana-utils"
rust-version = "1.84.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
