[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.tokio]
workspace = true
[dependencies.anyhow]
workspace = true
[dependencies.clap]
version = "4"
features = ["derive"]
[dependencies.config]
path = "../config"