[package]
name = "config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.serde]
workspace = true
[dependencies.tokio]
workspace = true
[dependencies.anyhow]
workspace = true
[dependencies.serde_yaml]
version = "0.9"